# JetBot

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  Makefile  meson.build  note.md  notes.md  slam.py
.devcontainer/: Dockerfile  devcontainer.json
cfg/: 2d.lua
i2c_if_methods/: i2c_dev_reg.hh  plain_i2c_rdwr.cc
inc/: duppa_i2c_encoder_mini.hh  icm20600.hh  linux_i2c.hh  lsm303d.hh  yolov8.hh
include/: duppa_i2c_encoder_mini.hh  linux_i2c.hh  lsm303d.hh
launch/: cartographer.py  nav2.py  slam.py
nodes/: controller.cc  controller.py  csi_cam.py  duck_detector.cc  example.cc  icm20600.cc  lsm303d.cc  meson.build  teleop.py  unfinished_control.cc  vl53l5cx.py
note/: TODO.md  backport-iwlwifi.txt  navi.md  trivia.md
notes/: TODO.md  backport-iwlwifi.txt  navi.md  trivia.md
objdetect/: Cargo.toml
object_detection/: Cargo.toml
params/: 2d_slam.lua  lds_2d.lua  nav2.yaml
pywrapcc/: CMakeLists.txt  duppa_i2c_encoder_mini.cc  lsm303d.cc  meson.build
refs/: ICM20600.cpp  ICM20600.h  duppa_i2c_encoder_mini.py  face_detect.py  lsm303d.py  ros_sensor_msg_pub_node.py  rust-embedded-hal-driver.txt
scripts/: i2c_fn_chk.py  jetbot.py  kbd_ctl.py  motor.py  move.py  robot.py  vl53l5cx_vis.py  vl53l5cx_viz.py
sensor_interfacing/: Makefile  duppa_i2c_encoder_mini.cc  duppa_i2c_encoder_mini.hh  duppa_i2c_encoder_mini_test.cc  linux_i2c.hh  linux_i2c_test.cc
sensor_interfacing/methods/: i2c_dev_reg.hh  ioctl_i2c_rdwr.cc  libi2c_smbus.cc  plain_i2c_rdwr.cc
tests/: CMakeLists.txt  csi_cam_test.cc  duppa_i2c_encoder_mini_test.cc  duppa_i2c_encoder_mini_test.py  icm20600_test.cc  linux_i2c_test.cc  lsm303d.cc  lsm303d_test.cc  lsm303d_test.py  meson.build  opencv_test.cc
trials/: Makefile  csi_camera.cc  i2c_dev_reg.hh  ioctl_i2c_rdwr.cc  opencv_buildinfo.txt
