py.extension_module('duppa_i2c_encoder_mini',
    sources : 'duppa_i2c_encoder_mini.cc',
    include_directories : inc,
    dependencies : [pybind11, py.dependency()],
)

py.extension_module('lsm303d',
    sources : 'lsm303d.cc',
    include_directories : inc,
    dependencies : [pybind11, py.dependency()],
)
