executable('linux_i2c_test', 'linux_i2c_test.cc', include_directories : inc)
executable('duppa_i2c_encoder_mini_test', 'duppa_i2c_encoder_mini_test.cc', include_directories : inc)
executable('lsm303d_test', 'lsm303d_test.cc', include_directories : inc)
executable('icm20600_test', 'icm20600_test.cc', include_directories : inc)
